# feature_engine

./: .coveragerc  .gitignore  .pypirc  .readthedocs.yml  0.11.1  0.22.2  1.0.3  1.18.2  1.4.1  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  README.md  SECURITY.md  categorical_encoder.ipynb  categorical_encoder.py  codecov.yml  fail_detail.txt  missing_data_imputation.py  mypy.ini  na_imputer.ipynb  outlier_handler.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_requirements.txt  test_results.txt  test_results_utf8.txt  test_run_cut.txt  tox.ini
.circleci/: config.yml
.github/: FUNDING.yml
benchmarks/: README.md  run_benchmarks.py
docs/: Makefile  about.rst  blogs.rst  books.rst  changelog.rst  code_of_conduct.rst  conf.py  contributing.rst  courses.rst  datasets.rst  donate.rst  getting_help.rst  governance.rst  howto.rst  index.rst  quickstart.rst  requirements.txt  roadmap.rst  tutorials.rst
examples/: README.md  RandomSampleImputer_SeedTest.ipynb  Untitled.ipynb  categorical-encoders.ipynb  categorical_encoder.ipynb  categorical_encoders.ipynb  creditApprovalUCI.csv  discretisers.ipynb  examples_requirements.txt  feature_engine_with_sklearn_pipeline.ipynb  missing_data_imputers.ipynb  na_imputer.ipynb  outlier.ipynb  variable_transformers.ipynb
feature_engine/: VERSION  __init__.py  base_transformers.py  categorical_encoder.py  categorical_encoders.py  dataframe_checks.py  datetime_transformers.py  discretisers.py  docstrings.py  estimator_checks.py  feature_selection.py  get_feature_names_out.py  mathematical_combination.py  mathematical_transformers.py  missing_data_imputation.py  missing_data_imputers.py  numpy_to_pandas.py  outlier_handler.py  outlier_removers.py  parameter_checks.py  preprocessers.py  tags.py  test_preprocessing.py  utils.py  validation.py  variable_manipulation.py  variable_transformers.py  wrappers.py
feature_engine.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
paper/: paper.bib  paper.md
profiling/: profiling.py  profiling.sh
tests/: check_estimators_with_parametrize_tests.py  conftest.py  test_all_transformers.py  (+27 more)
(+801 files in other folders)
